update build script and install scripts

--- a/lvm2/LVM2.2.02.98/make.tmpl
+++ b/lvm2/LVM2.2.02.98/make.tmpl
@@ -49,7 +49,7 @@ UDEV_LIBS =
 TESTING = no
 
 # Setup directory variables
-prefix = /src/clvm-san-adapter/.build
+prefix = /src/san-test/gen-san-adapter/.build
 exec_prefix = ${prefix}
 udev_prefix = ${exec_prefix}
 sysconfdir = ${prefix}/etc
